<package>
  <name>nvbg</name>
  <version>0.0.0</version>
  <description>nvbg</description>
  <maintainer email="turtlecannon@gmail.com">Dylan Foster</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/nvbg</url>
  <!-- <url type="bugtracker"></url> -->

  <author>nalyd</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>uscauv_common</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sbl_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>bml_cpp</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>uscauv_common</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sbl_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>bml_cpp</run_depend>

</package>