<package>
  <name>sbl</name>
  <version>0.0.0</version>
  <description>sbl</description>
  <maintainer email="">Maintained by Dylan Foster (turtlecannon@gmail.com)</maintainer>

  <license>BSD</license>

  <url type="website"></url>
  <!-- <url type="bugtracker"></url> -->

  <author>Maintained by Dylan Foster (turtlecannon@gmail.com)</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->


  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>nvbg</run_depend>
  <run_depend>xerces</run_depend>
  <run_depend>bml_cpp</run_depend>
  <run_depend>sbl_msgs</run_depend>

  <!-- Dependencies needed only for running tests. -->

  <export>
    <metapackage\>
  </export>



</package>
